# ParallelProgramming

hw_2/: CMakeLists.txt  cl.hpp  convolution.cl  main.cpp
hw_4/: CMakeLists.txt  cl.hpp  main.cpp  scan.cl
